--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       </p>
       <span>Ver planes</span>
       <p>
-        Rigen términos y condiciones. Los 2 meses gratis no están disponibles
+        Rigen términos y condiciones. Los 3 meses gratis no están disponibles
         para los usuarios que ya hayan probado Premium.
       </p>
     </header>
     <h2>¿Por qué pasarte a Premium?</h2>
-    <h3>Descargar música.</h3>
+    <h3>Descarga música.</h3>
     <p>Llévala siempre contigo</p>
     <h3>Sin anuncios.</h3>
     <p>Disfruta de la música sin interrupciones</p>
