--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio Spotify</title>
+    <link rel="stylesheet" href="./styles/sato.css" />
   </head>
+
   <body>
     <header>
       <nav>
         <img src="" alt="" />
         <ul>
-          <li>Premium</li>
-          <li>Ayuda</li>
-          <li>Descargar</li>
+          <li><a href="#">Premium</a></li>
+          <li><a href="#">Ayuda</a></li>
+          <li><a href="#">Descargar</a></li>
           <li>|</li>
-          <li>Registrarse</li>
-          <li>Iniciar sesión</li>
+          <li><a href="#">Registrarse</a></li>
+          <li><a href="#">Iniciar sesión</a></li>
         </ul>
       </nav>
       <h1>Prueba Premium gratis 3 meses</h1>
@@ -30,24 +32,44 @@
         para los usuarios que ya hayan probado Premium.
       </p>
     </header>
-    <h2>¿Por qué pasarte a Premium?</h2>
-    <h3>Descarga música.</h3>
-    <p>Llévala siempre contigo</p>
-    <h3>Sin anuncios.</h3>
-    <p>Disfruta de la música sin interrupciones</p>
-    <h3>Escucha lo que quieras.</h3>
-    <p>Incluso en el móvil</p>
-    <h3>Salta todas las canciones que quieras.</h3>
-    <p>Simplemente dale a siguiente</p>
+
+    <main>
+      <h2>¿Por qué pasarte a Premium?</h2>
+
+      <div>
+        <img src="" alt="" />
+        <h3>Descarga música.</h3>
+        <p>Llévala siempre contigo</p>
+      </div>
+
+      <div>
+        <img src="" alt="" />
+        <h3>Sin anuncios.</h3>
+        <p>Disfruta de la música sin interrupciones</p>
+      </div>
+
+      <div>
+        <img src="" alt="" />
+        <h3>Escucha lo que quieras.</h3>
+        <p>Incluso en el móvil</p>
+      </div>
+
+      <div>
+        <img src="" alt="" />
+        <h3>Salta todas las canciones que quieras.</h3>
+        <p>Simplemente dale a siguiente</p>
+      </div>
+    </main>
+
     <footer>
       <ul>
-        <li>Legal</li>
-        <li>Cookies</li>
-        <li>Información sobre los anuncios</li>
+        <li><a href="#">Legal</a></li>
+        <li><a href="#">Cookies</a></li>
+        <li><a href="#">Información sobre los anuncios</a></li>
       </ul>
       <ul>
-        <li>España</li>
-        <li>©️ 2019 Spotify AB</li>
+        <li><a href="#">España</a></li>
+        <li><a href="#">© copyright: 2019 Spotify AB</a></li>
       </ul>
     </footer>
   </body>
