--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio Spotify</title>
-    <link rel="stylesheet" href="./styles/sato.css" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
 
   <body>
     <header>
-      <nav>
+      <nav class="menu-header">
         <img src="" alt="" />
         <ul>
-          <li><a href="#">Premium</a></li>
-          <li><a href="#">Ayuda</a></li>
-          <li><a href="#">Descargar</a></li>
-          <li>|</li>
-          <li><a href="#">Registrarse</a></li>
-          <li><a href="#">Iniciar sesión</a></li>
+          <li class="list-ele display-inline" display-inline>
+            <a class="link" href="#">Premium</a>
+          </li>
+          <li class="list-ele display-inline">
+            <a class="link" href="#">Ayuda</a>
+          </li>
+          <li class="list-ele display-inline">
+            <a class="link" href="#">Descargar</a>
+          </li>
+          <li class="list-ele display-inline">|</li>
+          <li class="list-ele display-inline">
+            <a class="link" href="#">Registrarse</a>
+          </li>
+          <li class="list-ele display-inline">
+            <a class="link" href="#">Iniciar sesión</a>
+          </li>
         </ul>
       </nav>
       <h1>Prueba Premium gratis 3 meses</h1>
@@ -62,14 +73,24 @@
     </main>
 
     <footer>
-      <ul>
-        <li><a href="#">Legal</a></li>
-        <li><a href="#">Cookies</a></li>
-        <li><a href="#">Información sobre los anuncios</a></li>
+      <ul class="display-inline">
+        <li class="list-ele display-inline">
+          <a class="link" href="#">Legal</a>
+        </li>
+        <li class="list-ele display-inline">
+          <a class="link" href="#">Cookies</a>
+        </li>
+        <li class="list-ele display-inline">
+          <a class="link" href="#">Información sobre los anuncios</a>
+        </li>
       </ul>
-      <ul>
-        <li><a href="#">España</a></li>
-        <li><a href="#">© copyright: 2019 Spotify AB</a></li>
+      <ul class="display-inline">
+        <li class="list-ele display-inline">
+          <a class="link" href="#">España</a>
+        </li>
+        <li class="list-ele display-inline">
+          <a class="link" href="#">© copyright: 2019 Spotify AB</a>
+        </li>
       </ul>
     </footer>
   </body>
