Actualización de NAV y HEADER

--- a/index.html
+++ b/index.html
@@ -5,33 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio Spotify</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/main.css" />
+    <!-- TIPOGRAFIA -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    link
   </head>
 
   <body>
-    <header>
-      <nav class="menu-header">
-        <img src="" alt="" />
-        <ul>
-          <li class="list-ele display-inline" display-inline>
-            <a class="link" href="#">Premium</a>
-          </li>
-          <li class="list-ele display-inline">
-            <a class="link" href="#">Ayuda</a>
-          </li>
-          <li class="list-ele display-inline">
-            <a class="link" href="#">Descargar</a>
-          </li>
-          <li class="list-ele display-inline">|</li>
-          <li class="list-ele display-inline">
-            <a class="link" href="#">Registrarse</a>
-          </li>
-          <li class="list-ele display-inline">
-            <a class="link" href="#">Iniciar sesión</a>
-          </li>
-        </ul>
-      </nav>
+    <nav class="menu-header">
+      <img class="logo-header" src="./images/logo.png" alt="Logo de Spotify" />
+      <ul class="container">
+        <li class="list-ele display-inline" display-inline>
+          <a class="link" href="#">Premium</a>
+        </li>
+        <li class="list-ele display-inline">
+          <a class="link" href="#">Ayuda</a>
+        </li>
+        <li class="list-ele display-inline">
+          <a class="link" href="#">Descargar</a>
+        </li>
+        <li class="list-ele display-inline"><span class="elcoso">|</span></li>
+        <li class="list-ele display-inline">
+          <a class="link" href="#">Registrarse</a>
+        </li>
+        <li class="list-ele display-inline">
+          <a class="link last-link" href="#">Iniciar sesión</a>
+        </li>
+      </ul>
+    </nav>
+    <header class="header">
       <h1>Prueba Premium gratis 3 meses</h1>
 
       <p>
