--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <ul class="display-inline">
         <li class="list-ele display-inline">
           <a class="link" href="#">Legal</a>
@@ -98,10 +98,18 @@
           <a class="link" href="#">Información sobre los anuncios</a>
         </li>
       </ul>
-      <ul class="display-inline">
+
+      <!-- <ul class="display-inline">
         <li class="list-ele display-inline">
           <a class="link" href="#">España</a>
         </li>
+      </ul> LISTA ANTIGUA -->
+      <div class="espana">
+        <span class="espana-2"> España </span>
+        <img src="./images/es.svg" alt="ESPAÑA" />
+      </div>
+
+      <ul>
         <li class="list-ele display-inline">
           <a class="link" href="#">© copyright: 2019 Spotify AB</a>
         </li>
