--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img class="logo-header" src="./images/logo.png" alt="Logo de Spotify" />
       <ul class="container-flex-001">
         <li class="list-ele display-inline" display-inline>
-          <a class="link" href="#">Premium</a>
+          <a class="link" href="#">Premium todo va a explotar</a>
         </li>
         <li class="list-ele display-inline">
           <a class="link" href="#">Ayuda</a>
