--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
-      link>
+      link
+    />
   </head>
 
   <body>
@@ -22,7 +23,7 @@
       <img class="logo-header" src="./images/logo.png" alt="Logo de Spotify" />
       <ul class="container-flex-001">
         <li class="list-ele display-inline" display-inline>
-          <a class="link" href="#">Premium</a>
+          <a class="link" href="#">Premium Satory</a>
         </li>
         <li class="list-ele display-inline">
           <a class="link" href="#">Ayuda</a>
@@ -103,7 +104,7 @@
           <a class="link" href="#">España</a>
         </li>
       </ul> LISTA ANTIGUA -->
-      
+
       <div class="espana">
         <span class="espana-2"> España </span>
         <img src="./images/es.svg" alt="ESPAÑA" />
